--- a/app/html/components/_header.html
+++ b/app/html/components/_header.html
@@ -5,19 +5,19 @@
       <nav class="header__nav">
         <ul class="header__list">
           <li>
-            <a class="header__link desktop" href="#about">Преимущества</a>
+            <a class="header__link desktop" href="#benefits">Преимущества</a>
           </li>
           <li>
-            <a class="header__link desktop" href="#about">Программы</a>
+            <a class="header__link desktop" href="#programs">Программы</a>
           </li>
           <li>
-            <a class="header__link desktop" href="#about">Условия сна</a>
+            <a class="header__link desktop" href="#dream">Условия сна</a>
           </li>
           <li>
-            <a class="header__link desktop" href="#about">Расписание</a>
+            <a class="header__link desktop" href="#schedule">Расписание</a>
           </li>
           <li>
-            <a class="header__link desktop" href="#about">Группы</a>
+            <a class="header__link desktop" href="#groups">Группы</a>
           </li>
         </ul>
       </nav>
