--- a/app/scss/basic/_global.scss
+++ b/app/scss/basic/_global.scss
@@ -1,5 +1,6 @@
 .html {
   position: relative;
+  overflow-x: hidden;
 
   &.active {
     overflow: hidden;
@@ -16,6 +17,12 @@
   background-color: $white;
   position: relative;
   overflow-x: hidden;
+  @include r($sm) {
+    font-size: 18px;
+  }
+  @include r($phone) {
+    font-size: 16px;
+  }
 
   &::before {
     @include pseudo;
@@ -52,7 +59,7 @@
 
 .indent {
   margin-bottom: 116px;
-  @media (max-width: 940px) {
+  @media (max-width: 980px) {
     margin-bottom: 100px;
   }
   @include r($phone) {
@@ -74,8 +81,10 @@
 }
 
 .bg {
+  @include objectCoverBg;
+  object-position: bottom;
   position: absolute;
-  top: -150px;
+  top: -140px;
   left: 0;
   width: 100%;
   height: 800px;
