--- a/app/scss/components/_btn.scss
+++ b/app/scss/components/_btn.scss
@@ -10,6 +10,15 @@
   max-width: max-content;
   border: 2px solid transparent;
   transition: color .4s, background-color .4s, border .4s;
+  @include r($lg) {
+    padding: 13px 35px;
+  }
+  @include r($tablet) {
+    padding: 13px 30px;
+  }
+  @include r($phone) {
+    font-size: 16px;
+  }
 
   &:hover {
     background-color: #4c835d;
