--- a/app/scss/components/_title-section.scss
+++ b/app/scss/components/_title-section.scss
@@ -4,6 +4,25 @@
   color: #112718;
   font-weight: 700;
   letter-spacing: -2.4px;
+  @include r($desktop) {
+    font-size: 44px;
+    letter-spacing: -2px;
+  }
+  @include r($lg) {
+    font-size: 40px;
+    letter-spacing: -1.4px;
+  }
+  @include r($tablet) {
+    font-size: 38px;
+    letter-spacing: -1.2px;
+  }
+  @include r($sm) {
+    font-size: 36px;
+    letter-spacing: -1px;
+  }
+  @include r($phone) {
+    font-size: 34px;
+  }
 
   &--center {
     text-align: center;
