--- a/app/scss/home/_benefits.scss
+++ b/app/scss/home/_benefits.scss
@@ -1,10 +1,39 @@
 .benefits {
   margin-top: 250px;
 
+  .title-section {
+    @media (max-width: 415px) {
+      font-size: 32px;
+    }
+    @media (max-width: 385px) {
+      max-width: 270px;
+    }
+  }
+
+  .top__text {
+    @media (max-width: 720px) {
+      max-width: 510px;
+    }
+    @include r($sm) {
+      max-width: 450px;
+    }
+  }
+
   &__list {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(3, 1fr);
+    @include r($desktop) {
+      grid-gap: 15px;
+    }
+    @media (max-width: 992px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 525px) {
+      grid-template-columns: repeat(1, 1fr);
+      max-width: 330px;
+      margin: 0 auto;
+    }
   }
 
   &__card {
@@ -14,22 +43,62 @@
     border-radius: 48px;
     background-color: #E7F5EC;
     padding: 25px 30px 35px;
+    @media (max-width: 1260px) {
+      padding: 25px 22px 30px;
+      border-radius: 40px;
+    }
+    @media (max-width: 660px) {
+      border-radius: 36px;
+    }
+    @media (max-width: 560px) {
+      border-radius: 30px;
+    }
   }
 
   &__img {
     @include objectCoverBg;
     margin-bottom: 20px;
     mix-blend-mode: darken;
+    @media (max-width: 1260px) {
+      width: auto;
+      height: 182px;
+    }
+    @media (max-width: 860px) {
+      height: 170px;
+    }
+    @media (max-width: 660px) {
+      height: 155px;
+    }
   }
 
   &__name {
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 13px;
+    color: #0f141d;
+    @media (max-width: 1100px) {
+      font-size: 22px;
+    }
+    @media (max-width: 660px) {
+      font-size: 20px;
+    }
+    @media (max-width: 560px) {
+      line-height: 1.2;
+    }
   }
 
   &__description {
     opacity: .8;
+    @include r($desktop) {
+      font-size: 18px;
+      font-weight: 500;
+    }
+    @media (max-width: 660px) {
+      font-size: 17px;
+    }
+    @media (max-width: 525px) {
+      max-width: 260px;
+    }
 
     &--short {
       max-width: 310px;
