--- a/app/scss/home/_form.scss
+++ b/app/scss/home/_form.scss
@@ -3,6 +3,25 @@
 
   &__title {
     font-size: 40px;
+    @include r($desktop) {
+      font-size: 36px;
+      letter-spacing: -1.8px;
+    }
+    @include r($lg) {
+      font-size: 32px;
+      letter-spacing: -1.4px;
+    }
+    @include r($tablet) {
+      font-size: 30px;
+    }
+    @include r($phone) {
+      font-size: 28px;
+      max-width: 370px;
+      letter-spacing: -1px;
+    }
+    @media (max-width: 375px) {
+      font-size: 26px;
+    }
   }
 
   &__data {
@@ -12,6 +31,13 @@
     width: 100%;
     margin: 34px auto 0;
     background-color: #E7F5EC;
+    @media (max-width: 420px) {
+      padding: 24px 23px;
+      border-radius: 32px;
+    }
+    @media (max-width: 375px) {
+      padding: 23px 21px;
+    }
   }
 
   &__subtitle {
@@ -20,6 +46,9 @@
     font-weight: 700;
     color: #112718;
     margin-bottom: 24px;
+    @include r($sm) {
+      font-size: 22px;
+    }
   }
 
   &__item {
