--- a/app/scss/home/_programs.scss
+++ b/app/scss/home/_programs.scss
@@ -7,17 +7,36 @@
   &__row {
     @include flex-align-center(50);
     justify-content: space-between;
+    @include r($lg) {
+      gap: 27px;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
 
     &:nth-child(even) {
       flex-direction: row-reverse;
+      @include r($lg) {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
 
       .programs__info {
         text-align: left;
         align-items: flex-start;
+        @include r($lg) {
+          text-align: center;
+          align-items: center;
+        }
       }
 
       .programs__items {
         align-items: flex-start;
+        @include r($lg) {
+          text-align: center;
+          align-items: center;
+        }
       }
     }
   }
@@ -26,13 +45,59 @@
     @include objectCoverBg;
     border-radius: 32px;
     border: 4px solid $accent;
+    @include r($lg) {
+      border-radius: 26px;
+      border-width: 3px;
+    }
+    @include r($phone) {
+      height: 260px;
+    }
+    @media (max-width: 400px) {
+      height: 250px;
+    }
+
+    &--big {
+      @include r($desktop) {
+        height: 500px;
+        width: 500px;
+      }
+      @include r($lg) {
+        height: 430px;
+        width: 460px;
+      }
+      @include r($tablet) {
+        height: 410px;
+        width: 525px;
+      }
+      @include r($sm) {
+        height: 370px;
+      }
+      @media (max-width: 520px) {
+        height: 350px;
+      }
+      @include r($phone) {
+        height: 260px;
+        object-position: top;
+      }
+      @media (max-width: 400px) {
+        height: 250px;
+      }
+    }
   }
 
   &__info {
     @include flex-column(0);
     align-items: flex-end;
     max-width: 635px;
+    font-weight: 500;
     text-align: right;
+    @include r($desktop) {
+      max-width: 600px;
+    }
+    @include r($lg) {
+      align-items: center;
+      text-align: center;
+    }
   }
 
   &__subtitle {
@@ -42,6 +107,26 @@
     font-weight: 700;
     margin-bottom: 20px;
     color: #448157;
+    @media (max-width: 1300px) {
+      font-size: 34px;
+    }
+    @include r($desktop) {
+      font-size: 32px;
+      letter-spacing: -1.6px;
+    }
+    @media (max-width: 1100px) {
+      font-size: 30px;
+    }
+    @include r($lg) {
+      font-size: 28px;
+      letter-spacing: -1.2px;
+    }
+    @include r($tablet) {
+      font-size: 26px;
+    }
+    @include r($phone) {
+      font-size: 24px;
+    }
 
     &--short {
       max-width: 540px;
@@ -52,6 +137,15 @@
   &__text {
     font-size: 22px;
     letter-spacing: -1.2px;
+    @include r($desktop) {
+      font-size: 20px;
+    }
+    @include r($tablet) {
+      font-size: 18px;
+    }
+    @include r($phone) {
+      font-size: 16px;
+    }
 
     &--short {
       max-width: 500px;
@@ -62,10 +156,20 @@
     margin-top: 24px;
     align-items: flex-end;
     @include flex-column(4);
+    @include r($lg) {
+      margin-top: 18px;
+      align-items: center;
+    }
   }
 
   &__item {
     @include flex-align-center(9);
+    @include r($tablet) {
+      font-size: 18px;
+    }
+    @include r($phone) {
+      font-size: 16px;
+    }
 
     &::before {
       content: "";
@@ -74,11 +178,16 @@
       height: 6px;
       background-color: #546851;
       border-radius: 50%;
+      @include r($phone) {
+        width: 5px;
+        height: 5px;
+      }
     }
   }
 
   &__actions {
     @include flex-align-center(10);
+    flex-wrap: wrap;
     justify-content: center;
   }
 }
