адаптив секции с расписанием

--- a/app/scss/home/_programs.scss
+++ b/app/scss/home/_programs.scss
@@ -119,6 +119,7 @@
     }
     @include r($lg) {
       font-size: 28px;
+      line-height: 1.2;
       letter-spacing: -1.2px;
     }
     @include r($tablet) {
