--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,6 +12,7 @@
 @import "components/form-elements";
 @import "components/modal";
 @import "components/top";
+@import "components/menu-btn";
 
 @import "home/home";
 @import "home/benefits";
