--- a/app/html/components/_header.html
+++ b/app/html/components/_header.html
@@ -22,10 +22,29 @@
         </ul>
       </nav>
       <a class="header__btn btn desktop" href="#form">Записаться</a>
-      <button class="menu-btn menu-btn--header" style="display: none" type="button">
+      <button class="menu-btn menu-btn--header" type="button">
         <span class="menu-btn__line"></span>
         <span class="sr-only">Interact with menu</span>
       </button>
     </div>
   </div>
+  <nav class="header__mobile">
+    <ul class="header__list">
+      <li>
+        <a class="header__link mobile" href="#benefits">Преимущества</a>
+      </li>
+      <li>
+        <a class="header__link mobile" href="#programs">Программы</a>
+      </li>
+      <li>
+        <a class="header__link mobile" href="#dream">Условия сна</a>
+      </li>
+      <li>
+        <a class="header__link mobile" href="#schedule">Расписание</a>
+      </li>
+      <li>
+        <a class="header__link mobile" href="#groups">Группы</a>
+      </li>
+    </ul>
+  </nav>
 </header>
