--- a/app/scss/basic/_global.scss
+++ b/app/scss/basic/_global.scss
@@ -89,6 +89,24 @@
   width: 100%;
   height: 800px;
   z-index: -1;
+  @include r($desktop) {
+    height: 720px;
+  }
+  @media (max-width: 1060px) {
+    height: 700px;
+  }
+  @media (max-width: 900px) {
+    height: 650px;
+  }
+  @include r($sm) {
+    height: 640px;
+  }
+  @media (max-width: 515px) {
+    height: 660px;
+  }
+  @media (max-width: 400px) {
+    height: 650px;
+  }
 }
 
 ::-webkit-scrollbar {
