--- a/app/scss/components/_menu-btn.scss
+++ b/app/scss/components/_menu-btn.scss
@@ -1,6 +1,6 @@
 .menu-btn {
-  height: 46px;
-  width: 46px;
+  height: 48px;
+  width: 48px;
   cursor: pointer;
   z-index: 1000;
   display: none;
@@ -10,15 +10,11 @@
   border-radius: 50%;
   padding: 18px 13px;
   transition: all .4s;
-  background-color: $white50;
+  background-color: $accent;
   border: 1px solid transparent;
-  @include r($tablet) {
-    width: 43px;
-    height: 43px;
-  }
 
   &:hover {
-    background-color: $accent;
+    background-color: #4c835d;
 
     .menu-btn__line, .menu-btn__line::after, .menu-btn__line::before {
       background-color: $white;
@@ -27,15 +23,15 @@
 
   &:focus {
     background-color: transparent;
-    border-color: $accent150;
+    border-color: $accent;
 
     .menu-btn__line, .menu-btn__line::after, .menu-btn__line::before {
-      background-color: $white;
+      background-color: $black100;
     }
   }
 
   &--header {
-    @media (max-width: 840px) {
+    @media (max-width: 768px) {
       display: flex;
       margin-left: auto;
     }
@@ -44,7 +40,7 @@
   &__line,
   &__line::after,
   &__line::before {
-    background-color: $black;
+    background-color: $white;
     content: '';
     left: 0;
     top: 0;
@@ -84,14 +80,14 @@
         margin-top: 0;
         transform: rotate(-45deg);
         transition-delay: .4s;
-        background-color: $white;
+        background-color: $black100;
       }
 
       &::after {
         margin-top: 0;
         transform: rotate(45deg);
         transition-delay: .4s;
-        background-color: $white;
+        background-color: $black100;
       }
     }
   }
