--- a/app/html/components/_head.html
+++ b/app/html/components/_head.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta
       name="description"
-      content="Детский сад «Приоритет» – уютная среда, опытные педагоги, бассейн,
-      спорт и развивающие программы. Запишитесь на экскурсию!"
+      content="Детский сад «Приоритет» – уютная среда, опытные педагоги, бассейн, спорт и развивающие программы. Запишитесь на экскурсию!"
   >
   <title>Детский садик "Приоритет"</title>
   <link rel="shortcut icon" href="images/icons/favicon.png" type="image/x-icon">
