добавил новую секцию с видео об центре

--- a/app/scss/home/_home.scss
+++ b/app/scss/home/_home.scss
@@ -61,6 +61,10 @@
     @media (max-width: 380px) {
       font-size: 38px;
     }
+
+    span {
+      font-style: italic;
+    }
   }
 
   &__text {
