--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,6 +15,7 @@
 @import "components/menu-btn";
 
 @import "home/home";
+@import "home/about";
 @import "home/benefits";
 @import "home/programs";
 @import "home/reviews";
