--- a/app/html/components/_head.html
+++ b/app/html/components/_head.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta
-      name="description"
-      content="Детский сад «Приоритет» – уютная среда, опытные педагоги, бассейн, спорт и развивающие программы. Запишитесь на экскурсию!"
-  >
+  <meta name="description"
+    content="Детский сад «Приоритет» – уютная среда, опытные педагоги, бассейн, спорт и развивающие программы. Запишитесь на экскурсию!">
   <title>Детский садик "Приоритет"</title>
   <link rel="shortcut icon" href="images/icons/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
   <link rel="stylesheet" href="css/style.min.css">
 </head>
