--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,4 +20,5 @@
 @import "home/programs";
 @import "home/reviews";
 @import "home/schedule";
-@import "home/form";
+@import "home/contacts";
+@import "home/command";
