--- a/app/scss/home/_about.scss
+++ b/app/scss/home/_about.scss
@@ -1,25 +1,107 @@
 .about {
-    &__text {
-        margin: 40px auto 60px;
-        max-width: 730px;
-        text-align: center;
+  &__text {
+    margin: 40px auto 50px;
+    max-width: 730px;
+    text-align: center;
+    @include r($tablet) {
+      font-size: 18px;
+      font-weight: 500;
+    }
+    @include r($sm) {
+      margin-bottom: 40px;
+    }
+    @media (max-width: 400px) {
+      font-size: 17px;
+      margin-bottom: 35px;
+    }
+  }
+
+  &__video {
+    @include bg;
+    @include flex-center;
+    background-image: url("../images/bg-about.jpg");
+    max-width: 830px;
+    width: 100%;
+    min-height: 460px;
+    position: relative;
+    margin: 0 auto;
+    overflow: hidden;
+    border-radius: 20px;
+    @include r($lg) {
+      min-height: 420px;
+    }
+    @media (max-width: 840px) {
+      min-height: 380px;
+    }
+    @include r($sm) {
+      min-height: 340px;
+    }
+    @media (max-width: 530px) {
+      min-height: 310px;
+    }
+    @include r($phone) {
+      min-height: 290px;
+      margin: 0 -3px;
+      width: auto;
+    }
+    @media (max-width: 400px) {
+      min-height: 280px;
+    }
+  }
+
+  &__video::before {
+    @include pseudo;
+    border-radius: 20px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(#000, .4);
+  }
+
+  &__btn {
+    position: absolute;
+    padding: 3px;
+    z-index: 100;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    @include flex-center;
+    @include topLeft50;
+    transition: border .4s;
+
+    &:hover {
+      border-color: $white;
+
+      svg path {
+        fill: $white;
+        fill-opacity: 1;
+      }
     }
 
-    &__video {
-        max-width: 800px;
-        width: 100%;
-        position: relative;
-        margin: 0 auto;
-        overflow: hidden;
-        border-radius: 20px;
+    &:focus {
+      border-color: #17ceac;
+
+      svg path {
+        fill: #17ceac;
+        fill-opacity: 1;
+      }
     }
 
-    &__video::before {
-        @include pseudo;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(#000, .4);
+    svg {
+      width: 80px;
+      height: 80px;
+      @include r($desktop) {
+        width: 70px;
+        height: 70px;
+      }
+      @include r($lg) {
+        width: 66px;
+        height: 66px;
+      }
+      @include r($phone) {
+        width: 63px;
+        height: 63px;
+      }
     }
+  }
 }
